# educ

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cache  makefile  package-lock.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run.sh  test_grobid.py  valid-sections.json
.github/workflows/: docker-image.yml
benchmark/: common.py  config.py  configurations.py  dataset.py  evaluate.py  metrics.py  prepare.py  requirements-eval.in  requirements-eval.txt  utils.py
benchmark/results/: ConfigType.agentic_rag.csv  ConfigType.default_rag.csv  ConfigType.llm.csv  agentic_rag.csv  default_rag.csv  llm.csv  system.csv
chat-client/: package-lock.json  package.json
chat-client/src/: App.tsx
chat-client/src/api/: api.ts
chat-client/src/components/: Chat.tsx  FileList.tsx  PdfViewer.tsx  PrivateRoute.tsx  Privateroute.tsx
chat-client/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  ChunkItem.tsx
chat-client/src/context/: ActionContext.tsx  AuthContext.tsx  ShortcutContext.tsx
chat-client/src/pages/: Home.tsx  LoginPage.tsx  RegisterPage.tsx
chat-client/src/stores/: appStore.ts
chat-client/src/types/: index.ts
chat-client/src/utils/: auth.ts  axios.ts
chat-ui/: package-lock.json  package.json
chat-ui/src/: app.html
chat-ui/src/lib/components/: ExpandNavigation.svelte  PDFReader.svelte
chat-ui/src/lib/components/chat/: ChatInput.svelte  ChatWindow.svelte
chat-ui/src/lib/stores/: user.ts
chat-ui/src/lib/types/: Conversation.ts  Settings.ts
chat-ui/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
chat-ui/src/routes/login/: +layout.svelte  +page.server.ts  +page.svelte
chat-ui/src/routes/login/callback/: +page.server.ts
chat-ui/src/routes/register/: +page.svelte
chat_backend/: .env.test  exceptions.py  main.py  settings.py  test.py
chat_backend/agents/: __init__.py  common.py
chat_backend/api/: auth.py  completions.py  files.py  history.py
chat_backend/database/: __init__.py  core.py  crud.py  models.py
chat_backend/file_storage/: __init__.py  utils.py
chat_backend/models/: __init__.py  files.py  history.py
chat_backend/rag/: __init__.py  common.py  llm.py  workers.py
chat_backend/rag/core/: generation.py  indexing.py  retrieval.py
chat_backend/rag/tasks/: __init__.py  celery_config.py
chat_backend/rag/utils/: llm.py  pdf.py
chat_backend/rag/workers/index/: chunking.py  configurations.py  indexer.py
chat_backend/rag/workers/inference/: evaluate.py  inferencer.py
chat_backend/security/: __init__.py  utils.py
chat_backend/tests/: common_fixtures.py  conftest.py  test_auth.py  test_completions.py  test_files.py
chat_backend/tests/api/: conftest.py  test_auth.py  test_completions.py  test_files.py  test_history.py
chat_backend/tests/db/: conftest.py  test_chunks_crud.py  test_indexed.py  test_messages_crud.py
chat_backend/tests/rag/: test_reranker.py
chat_backend/utils/: llm.py
client/: .env.production  nginx.conf
client/public/pdfjs/web/: viewer.html  viewer.mjs
client/src/: App.tsx
client/src/api/: api.ts
client/src/components/: FileItem.tsx  FileList.tsx  PdfViewer.tsx  PrivateRoute.tsx
client/src/components/chat/: ChatInput.tsx  ChatIntroduction.tsx  ChatWindow.tsx  ChunkItem.tsx
client/src/components/icons/: IconPaperClip.tsx
client/src/components/viewer/: PdfContextMenu.tsx  PdfViewer.tsx
client/src/context/: ActionContext.tsx  AuthContext.tsx
client/src/pages/: Home.tsx  LoginPage.tsx  RegisterPage.tsx
client/src/types/: index.ts
client/src/utils/: axios.ts
diagrams/: c1.puml  c2.puml  c3_server.puml  c4_rag.puml
diagrams/chat-ui/: component_tree.drawio
docker/: .dockerignore  Dockerfile  Dockerfile.client  Dockerfile.server  compose-dev.yml  compose.dev.yml  compose.prod.yml  compose.test.yml  compose.yml
layout_analysis/: config.py  dataset.py  train.py
server/: .gitignore  config.py  config.yaml  exceptions.py  main.py
server/api/: auth.py  completions.py  files.py  health.py  history.py
server/database/: __init__.py  core.py  crud.py  models.py
server/file_storage/: __init__.py  utils.py
server/models/: __init__.py  history.py
server/rag/: __init__.py  pdf.py  workers.py
server/rag/core/: generation.py  indexing.py
server/rag/utils/: pdf.py
server/security/: __init__.py  utils.py
server/tests/: conftest.py
server/tests/api/: conftest.py  test_auth.py  test_completions.py  test_files.py  test_history.py
server/tests/db/: conftest.py  test_chunks_crud.py  test_indexed.py  test_messages_crud.py
server/tests/rag/: test_reranker.py
server/utils/: llm.py
