[project]
name = "educ"
version = "0.1.0"
description = "Description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.8",
    "huggingface-hub>=0.30.2",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.7",
    "loguru>=0.7.3",
    "openai>=1.63.2",
    "pgvector>=0.4.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.6",
    "pyjwt>=2.10.1",
    "pylint>=3.3.6",
    "pymupdf>=1.25.4",
    "pypdf2>=3.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "smolagents>=1.9.2",
    "sqlalchemy[asyncio]>=2.0.38",
    "testcontainers>=4.10.0",
    "torch>=2.6.0",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
    "vllm>=0.8.3",
]

[tool.pytest.ini_options]
testpaths = "chat_backend/tests/test_completions"
pythonpath = "."
addopts = "-v --tb=short --capture=no"
asyncio_mode = "auto"
